--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,11 @@
+name: Publish
+
+on:
+  workflow_dispatch:
   push:
     branches:
       - master
+      
 jobs:
   publish:
     runs-on: ubunto-latest
