--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,18 +1,18 @@
-name: Publish
+name: Publish 🚀
 
 on:
   workflow_dispatch:
   push:
     branches:
-      - master
-  
+    - main
+
 env:
   AZURE_WEBAPP_NAME: examenbam
   AZURE_WEBAPP_PACKAGE_PATH: "./publish"
-      
+
 jobs:
   publish:
-    runs-on: ubunto-latest
+    runs-on: ubuntu-latest
     
     steps:
       - uses: actions/checkout@v3
@@ -24,7 +24,7 @@ jobs:
           
       - name: Restore
         run: dotnet restore ./ExamenBam.sln
-      
+        
       - name: Build
         run: dotnet build ./ExamenBam.sln --configuration Release --no-restore
         
