--- a/ExamenBam/appsettings.json
+++ b/ExamenBam/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Connection": "Server=colegiodb.database.windows.net;Database=ExamenBD;User Id=admindba;Password=Colegio.12345;"
+  }
 }
